# global-shortcuts

./: .gitignore  Cargo.toml  LICENSE  README.md  index.d.ts  index.js  package.json  tsconfig.json
.github/workflows/: build.yml  publish.yml
__test__/: index.spec.ts
benchmark/: bench.ts
scripts/: release.js
src/: main.rs
